<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_resource"
    >

    <ImageButton
        android:id="@+id/accountButton"
        android:layout_width="51dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:src="@drawable/baseline_person_24"
        android:background="@drawable/baseline_person_24"
        />

    <TextView
        android:id="@+id/camaraderie_header_for_main_dashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/cambria_italic"
        android:text="Camaraderie"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/admin_mode"
        android:layout_width="209dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/cambria"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:text="Admin Mode"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@id/admin_see_users"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camaraderie_header_for_main_dashboard" />

    <TextView
        android:id="@+id/name_for_main_dashboard"
        android:layout_width="57dp"
        android:layout_height="31dp"
        android:layout_marginEnd="8dp"
        android:text="[Name]"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/admin_mode"
        app:layout_constraintEnd_toStartOf="@+id/accountButton"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/admin_see_users"
        android:layout_width="302dp"
        android:layout_height="102dp"
        android:backgroundTint="#8FE5E4FF"
        android:fontFamily="@font/cambria"
        android:text="User Database"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/admin_see_events"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/admin_mode"
        app:strokeWidth="7dp" />

    <Button
        android:id="@+id/admin_see_events"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:backgroundTint="#8FE5E4FF"
        android:fontFamily="@font/cambria"
        android:text="Event Database"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:strokeWidth="7dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/admin_see_users"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/admin_see_pics"/>

    <Button
        android:id="@+id/admin_see_pics"
        android:layout_width="300dp"
        android:layout_height="100sp"
        android:backgroundTint="#8FE5E4FF"
        android:fontFamily="@font/cambria"
        android:text="Image Database"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:strokeWidth="7dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/admin_see_events"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/back"
        />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="150dp"
        android:height="75dp"
        android:backgroundTint="#8FE5E4FF"
        android:fontFamily="@font/cambria"
        android:text="Back"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:strokeWidth="7dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/admin_see_pics"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/black"
        android:paddingHorizontal="2dp"
        android:paddingBottom="20dp"
        android:paddingTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/hostEvent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:layout_weight="1.2"
            android:src="@drawable/hostevent" />

        <ImageButton
            android:id="@+id/dashboardButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:layout_weight="1"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:src="@drawable/dashboard_image" />

        <ImageButton
            android:id="@+id/myEvents"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:layout_weight="1"
            android:src="@drawable/seeevents" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>